# bincat

./: .gitignore  .hgignore  .merlin  CHANGELOG  Dockerfile  Makefile  README  README.md  TODO.md  autres.md  azure-pipelines.yml
ocaml/: .gitignore  Makefile  dune-project  dune-workspace
ocaml/src/: .dir-locals.el  Makefile  bincat.ml  bincat_native.ml  bincat_ver.ml.tmpl  dune  lexer.mll  main.ml  main.mli  package.json  parser.mly
ocaml/src/data-struct/: asm.ml  asm.mli  cfa.mli  code.ml  code.mli  data.ml  data.mli  imports.ml  interval.ml  interval.mli  mapped_mem.ml  register.ml  register.mli  taint.ml  types.ml
ocaml/src/disassembly/: abi.ml  abi.mli  armv7.ml  armv7Imports.ml  armv8A.ml  armv8A_ppx.ml  armv8aImports.ml  cfa.ml  cfa.mli  core_x86.ml  decoder.ml  decoder.mli  decodeutils.ml  disas.ml  imports.ml  powerpc.ml  powerpcImports.ml  riscVImports.ml  risc_v.ml  x64.ml  x64Imports.ml  x86.ml  x86Imports.ml
ocaml/src/domains/: abstractStack.ml  abstract_heap.ml  abstract_objects.ml  bit.ml  byte_interval.ml  core_heap.ml  domain.mli  env.ml  heap.ml  intervalDomain.ml  objects.ml  pair.ml  pair.mli  pointer.ml  ptr.ml  ptr.mli  ptrSet.ml  reduced_bit_tainting.ml  reduced_taintedBitVector_byteInterval.ml  reduced_taintedBitVector_interval.ml  reduced_unrel_typenv.ml  reduced_unrel_typenv_heap.ml  reduced_unrel_typenv_heap_objects.ml  reduced_unrel_typenv_heap_stack.ml  reduced_value_tainting.ml  stack.ml  symbexp.ml  tainting.ml  tainting.mli  typenv.ml  typing.ml  unrel.ml  unrel.mli  unrels.ml  valSet.ml  value.ml  vector.ml
ocaml/test/: Makefile  eggloader_x86  init-5055-read-all.ini  init-5055-read-lastbyte.ini  nop.ini  push_ebp.ini  template0.ini  test.ml  test_instructions.py  test_loader.py  test_values.ini  test_values.py
(+288 files in other folders)
