(lang dune 3.0)

(name bincat)

(source (github airbus-seclab/bincat))

(using menhir 2.0)

(use_standard_c_and_cxx_flags)

(package
  (name bincat)
  (description "BinCAT is a *static* Binary Code Analysis Toolkit, designed to help reverse engineers, directly from IDA or using Python for automation.")
  (depends
    menhir
    ocamlgraph
    ppxlib
    zarith))

