(lang dune 2.9)

(name bincat)

(source (github airbus-seclab/bincat))

(using menhir 2.0)

(use_standard_c_and_cxx_flags)

(generate_opam_files)

(package
  (name bincat)
  (description "BinCAT is a *static* Binary Code Analysis Toolkit, designed to help reverse engineers, directly from IDA or using Python for automation.")
  (depends
    menhir
    ocamlgraph
    ppxlib
    zarith))

